--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayush Jain | Portfolio</title>
 </head>
-<body style="background-color: #1e1d1d; color: aliceblue;">
+<body>
 
     <!-- Header Section -->
     <header>
