Update university name in resume

--- a/resume.html
+++ b/resume.html
@@ -126,7 +126,7 @@
                     </tr>
                     <tr>
                         <td>Undergraduate (2nd Year)</td>
-                        <td>MBM University</td>
+                        <td>State Government University</td>
                         <td>2024 - present</td>
                     </tr>
                 </tbody>
